--- a/views/report_form.erb
+++ b/views/report_form.erb
@@ -11,7 +11,13 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-
+  <script>
+		$(function(){
+      $('#add').click(function(){
+  			$('#list').clone().appendTo('#regular_task');
+      });
+		});
+  </script>
   <title>Weekly Report Maker</title>
 </head>
 <body>
@@ -66,7 +72,21 @@
             <p class="caption">
               If you have more regular tasks, you add URL paramaters to "?tasks=Num". Num is the your tasks.
             </p>
-            <% @tasks.to_i.times do |index| %>
+            <div id="regular_task">
+              <div id="list">
+                <div class="row">
+                  <div class="input-field col s2">
+                    <input name="task_name[]" type="text" required />
+                    <label class="active">Task Item</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s4">
+                    <input name="task_detail[]" type="text" />
+                    <label class="active">Detail</label>
+                  </div>
+                </div>
+              </div>
               <div class="row">
                 <div class="input-field col s2">
                   <input name="task_name[]" type="text" />
@@ -79,8 +99,8 @@
                   <label class="active">Detail</label>
                 </div>
               </div>
-            <% end %>
-
+            </div>
+            <button class="btn" type="button" id="add">追加</button>
             <h4>Boyaki</h4>
             <div class="row">
               <div class="input-field col s6">
@@ -88,7 +108,6 @@
                 <label class="active">Write your last week's episode.</label>
               </div>
             </div>
-
             <button class="btn waves-effect waves-light" type="submit">Create Tex file!</button>
           </form>
         </div>
