--- a/views/report_form.erb
+++ b/views/report_form.erb
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+  <!--
   <script>
 		$(function(){
       $('#add').click(function(){
@@ -18,6 +19,18 @@
       });
 		});
   </script>
+  -->
+  <script>
+		$(function(){
+      $('#add').click(function(){
+  			$('#regular_task').append('<div class="tasks"><div class="row"><div class="input-field col s2"><input name="task_name[]" type="text" required /><label class="active">Task Item</label></div></div><div class="row"><div class="input-field col s4"><input name="task_detail[]" type="text" /><label class="active">Detail</label></div></div></div>');
+      });
+      $('#remove').click(function(){
+        $('#regular_task .tasks:last-child').remove();
+      });
+		});
+  </script>
+
   <title>Weekly Report Maker</title>
 </head>
 <body>
@@ -73,7 +86,7 @@
               If you have more regular tasks, you add URL paramaters to "?tasks=Num". Num is the your tasks.
             </p>
             <div id="regular_task">
-              <div id="list">
+              <div class="tasks">
                 <div class="row">
                   <div class="input-field col s2">
                     <input name="task_name[]" type="text" required />
@@ -87,20 +100,23 @@
                   </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="input-field col s2">
-                  <input name="task_name[]" type="text" />
-                  <label class="active">Task Item</label>
+              <div class="tasks">
+                <div class="row">
+                  <div class="input-field col s2">
+                    <input name="task_name[]" type="text" required />
+                    <label class="active">Task Item</label>
+                  </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="input-field col s4">
-                  <input name="task_detail[]" type="text" />
-                  <label class="active">Detail</label>
+                <div class="row">
+                  <div class="input-field col s4">
+                    <input name="task_detail[]" type="text" />
+                    <label class="active">Detail</label>
+                  </div>
                 </div>
               </div>
             </div>
-            <button class="btn" type="button" id="add">追加</button>
+            <button class="btn" type="button" id="add">add</button>
+            <button class="btn" type="button" id="remove">remove</button>
             <h4>Boyaki</h4>
             <div class="row">
               <div class="input-field col s6">
